[gd_scene load_steps=8 format=2]

[ext_resource path="res://ships/enemies/enemy1/enemy_ship_type_a.gd" type="Script" id=2]
[ext_resource path="res://ships/enemies/enemy1/floater1.png" type="Texture" id=3]
[ext_resource path="res://ships/enemies/enemy1/floater2.png" type="Texture" id=4]
[ext_resource path="res://ships/projectiles/warp.png" type="Texture" id=5]
[ext_resource path="res://ships/enemies/enemy1/floater3.png" type="Texture" id=6]

[sub_resource type="AnimatedTexture" id=1]
frames = 2
fps = 9.1
frame_0/texture = ExtResource( 3 )
frame_1/texture = ExtResource( 4 )
frame_1/delay_sec = 0.0

[sub_resource type="Animation" id=2]
resource_name = "warp_in"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("warp_tex:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1.1487 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("warp_tex:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -360.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("tex:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="EnemyShipTypeA" type="KinematicBody2D" groups=["enemy", "windsor"]]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )
dead_tex = ExtResource( 6 )

[node name="tex" type="Sprite" parent="."]
texture = SubResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -12, 1, -12, -1, -6, -4, 6, -4, 6, 4, -6, 4 )

[node name="gun_timer" type="Timer" parent="."]

[node name="BulletSpawnPos" type="Node2D" parent="."]
position = Vector2( -17, 0 )

[node name="warp_tex" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
rotation = 6.28319
texture = ExtResource( 5 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/warp_in = SubResource( 2 )

[connection signal="timeout" from="gun_timer" to="." method="_on_gun_timer_timeout"]
